2008-10-02  Richard Hult  <richard@imendio.com>

	* src/dh-window.c:
	* src/dh-window.h: Add private instance data and do lots of
	style/indentation fixes after the webkit merge. Don't use
	deprecated gtk type utils.

2008-10-02  Richard Hult  <richard@imendio.com>

	* src/dh-base.c:
	* src/dh-base.h: Add private instance data and fixup
	whitepace/style.

2008-10-02  Richard Hult  <richard@imendio.com>

	* src/dh-search.c:
	* src/dh-search.h: Add private instance data and fixup
	whitepace/style.

2008-10-02  Richard Hult  <richard@imendio.com>

	* src/dh-book-tree.c:
	* src/dh-book-tree.h: Whitespace cleanup.

2008-10-02  Richard Hult  <richard@imendio.com>

	* src/dh-util.c:
	* src/dh-util.h: Remove unused
	functions (dh_util_uri_relative_new, dh_util_uri_is_relative,
	tagify_bold_labels) and their helper functions.

2008-10-02  Richard Hult  <richard@imendio.com>

	* src/dh-preferences.c (dh_preferences_show_dialog): Use correct
	data directory.

2008-10-02  Richard Hult  <richard@imendio.com>

	* src/dh-error.c:
	* src/dh-link.c:
	* src/dh-link.h: Whitespace cleanup.

2008-10-02  Richard Hult  <richard@imendio.com>

	* src/dh-parser.c: (parser_start_node_cb): Try a bit harder to get
	useful info from old devhelp files by setting the link type to
	struct, enum if those can be extracted from the name.

2008-10-02  Richard Hult  <richard@imendio.com>

	* src/dh-keyword-model.c: Remove g_return_* for static functions
	except for the consistency stamp checks.
	- Simplify the finalizer.
	- Small style cleanups.

2008-10-02  Richard Hult  <richard@imendio.com>

	* src/dh-keyword-model.c:
	* src/dh-keyword-model.h: Untabify, remove trailing whitespace.

2008-10-02  Richard Hult  <richard@imendio.com>

	* src/dh-book-tree.c:
	* src/dh-book-tree.h: Move private struct typedef from the header.

2008-10-02  Richard Hult  <richard@imendio.com>

	* src/dh-book-tree.c:
	* src/dh-book-tree.h: Modernize the code a bit, use private