@@ -1,3 +1,11 @@
+2008-10-03  Richard Hult  <richard@imendio.com>
+
+	* src/dh-link.c:
+	* src/dh-link.h: Add getters for the link members, change the
+	deprecated bool to a bitfield of flags.
+	- Use GSlice for the link struct.
+	- Sort deprecated links after non-deprecated.
+
 2008-10-02  Richard Hult  <richard@imendio.com>
 
 	* src/dh-window.c:
